feat: Implement basic QuestActivity with Jetpack Compose
- Create QuestActivity to display quest information based on location
- Implement Composable function for quest content display
- Add coroutine for asynchronous loading of quest information
- Use proper state management with remember and mutableStateOf
- Integrate with existing database and DAO structures
- Implement error handling for missing quests or locations

This commit establishes the foundation for quest interaction,
allowing for future expansion of quest-related features and UI improvements.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -130,5 +130,6 @@
     <string name="quest_10_warrior_completion">Der letzte Kampf wurde gewonnen und das Königreich ist gerettet!</string>
     <string name="quest_10_thief_completion">Der Dieb hat den Endgegner überlistet und seine Beute gesichert!</string>
     <string name="quest_10_mage_completion">Die Dunkelheit wurde besiegt und das Gleichgewicht der Magie wiederhergestellt!</string>
+    <string name="quest_location_id">QUEST_LOCATION_ID</string>
 
 </resources>
