refactor: Implement clean architecture for main menu and navigation
- Create BaseActivity for common functionality
- Move UI components to dedicated packages
- Implement centralized navigation management
- Extract strings to resources
- Create reusable menu components
- Improve code organization and maintainability

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,13 @@
 
     <string name="loading">Laden…</string>
 
+    <!-- Menu Items -->
+    <string name="menu_map">Zur Karte</string>
+    <string name="menu_character_list">Character Liste</string>
+    <string name="menu_character_creation">Character Erstellung</string>
+    <string name="menu_locations">Orte</string>
+    <string name="menu_player_stats">Spieler Statistiken</string>
+
     <!-- Quest Names -->
     <string name="quest_1">Der erste Auftrag</string>
     <string name="quest_2">Der Wald der Geheimnisse</string>
