--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -156,5 +156,10 @@
     <string name="create_your_character">Erstelle deinen Charakter</string>
     <string name="character_name">Charaktername</string>
     <string name="create_character">Charakter erstellen</string>
+    <string name="quest_progress">Quest-Progress</string>
+    <string name="quest_accept_button">Ich nehme die Herausforderung an!</string>
+    <string name="quest_action_button">Ich stelle mich der Aufgabe!</string>
+    <string name="quest_finish_button">Mission erfolgreich abgeschlossen!</string>
+    <string name="quest_unknown_button">Weiter</string>
 
 </resources>
