refactor: restructure database initialization
- Split monolithic DatabaseInitializer (550 lines) into focused components
- Create separate data objects for Quest, Character and Location data
- Implement dedicated initializers for each data type
- Improve code maintainability and readability
- Follow Clean Code principles with single responsibility classes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -161,5 +161,6 @@
     <string name="quest_action_button">Ich stelle mich der Aufgabe!</string>
     <string name="quest_finish_button">Mission erfolgreich abgeschlossen!</string>
     <string name="quest_unknown_button">Weiter</string>
+    <string name="dhbw_mannheim">DHBW Mannheim</string>
 
 </resources>
