--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -169,5 +169,46 @@
     <string name="max_level_reached">Maximallevel erreicht!</string>
     <string name="add_test_xp_button">Add 250 XP</string>
     <string name="try_level_up_button">Level-Up-Try</string>
+    <string name="random_character_1">Thoren der Schmied</string>
+    <string name="random_character_2">Elara die Kräuterkundige</string>
+    <string name="random_character_3">Garrick der Waffenhändler</string>
+    <string name="random_character_4">Lyra die Schneider</string>
+    <string name="random_character_5">Brutus der Metzger</string>
+    <string name="random_character_6">Fabian der Geistliche</string>
+    <string name="random_character_7">Meister Aldrich</string>
+    <string name="random_character_8">Seherin Moira</string>
+    <string name="random_character_9">Hauptmann Darius</string>
+    <string name="random_character_10">Sylvia die Weise</string>
+    <string name="random_character_11">Pater Hans</string>
+    <string name="random_character_12">Finn der Fischer</string>
+    <string name="random_character_13">Runa die Wirtin</string>
+    <string name="random_character_14">Cedric der Stallbursche</string>
+    <string name="random_character_15">Iris die Bäckerin</string>
+    <string name="random_character_16">Horst der Nichtsnutz</string>
+    <string name="random_character_17">Ihre Heiligkeit Sofia</string>
+    <string name="random_character_18">Erzmagier Thalion</string>
+    <string name="random_character_19">Waldläufer Rowan</string>
+    <string name="random_character_20">Heilerin Senna</string>
+    <string name="random_character_21">Schmiedin Kira</string>
+    <string name="random_character_22">Erzmagister Arundil</string>
+    <string name="random_character_23">Großmeister Perio</string>
+    <string name="random_character_24">Seherin Paula</string>
+    <string name="random_character_25">Pius der Landstreicher</string>
+    <string name="rand_quest_story_1">" wurde in einer dunklen Höhle vershüttet. Du kamst zum Glück rechtszeitig zur Rettung vorbei."</string>
+    <string name="rand_quest_story_2">" hat sich mal wieder mit dem falschen Gegner angelegt. Gegen dich hatte der Riesenskorpion dann keine Chance."</string>
+    <string name="rand_quest_story_3">" wollte wieder mit dem Kopf durch die Wand. Naja, du hast ja immer etwas Verbandszeug dabei und konntest helfen."</string>
+    <string name="rand_quest_story_4">" freut sich unheimlich, dich zu sehen. Die gefundene Schatztruhe zeigt sich schwer knackbar . Deine Hilfe soll sich auszahlen!"</string>
+    <string name="rand_quest_story_5">" testet eine recht wilde Erfindung von Peter dem Erfinder. Wärst du nicht zufällig vorbeigekommen, hätte es sich für immer ausgetestet. Er sollte besser aufpassen"</string>
+    <string name="rand_quest_story_6">" ist in Begriff in eine dunkle Höhle zu gehen. Darin sei ein Schatz versteckt! Du appelierst an die Vernunft, als dann noch Trollgeräusche zu hören sind, wird du reich beschenkt."</string>
+    <string name="rand_quest_story_7">" wurde von einer Gruppe Kobolde umzingelt. Dein beherztes Eingreifen rettete die Situation und brachte dir einen dankbaren Verbündeten ein."</string>
+    <string name="rand_quest_story_8">" experimentierte mit einem seltsamen Trank und verwandelte sich versehentlich in einen Frosch. Dein Wissen über Gegenzauber kam gerade rechtzeitig."</string>
+    <string name="rand_quest_story_9">" steckte kopfüber in einem magischen Portal fest. Mit deiner Hilfe gelang die Befreiung, und ihr entdecktet gemeinsam eine verborgene Dimension."</string>
+    <string name="rand_quest_story_10">" wurde von einem verzauberten Baum gefangen gehalten. Deine sanfte Überredungskunst überzeugte den Baum, loszulassen, und du erhieltest ein seltenes Samenkorn."</string>
+    <string name="rand_quest_story_11">" jagte einem Irrlicht hinterher und verirrte sich im Nebelwald. Dein Orientierungssinn führte euch beide sicher hinaus und zu einem versteckten Elfendorf."</string>
+    <string name="rand_quest_story_12">" versuchte, eine antike Rune zu entziffern, und löste dabei versehentlich einen Fluch aus. Deine schnelle Reaktion und dein magisches Wissen bannten die dunkle Energie."</string>
+    <string name="rand_quest_story_13">" wurde von einem Schwarm wütender Pixies verfolgt. Deine Kenntnis ihrer Sprache beruhigte die aufgebrachten Wesen und brachte dir einen Beutel Feenstaub ein."</string>
+    <string name="rand_quest_story_14">" stürzte in eine Fallgrube voller Schlingpflanzen. Deine botanischen Kenntnisse halfen bei der Befreiung und führten zur Entdeckung einer seltenen Heilpflanze."</string>
+    <string name="rand_quest_story_15">" wurde von einem Gestaltwandler getäuscht und in einen Käfig gesperrt. Dein scharfer Verstand durchschaute die List und befreite den dankbaren Gefangenen."</string>
+    <string name="rand_quest_story_16">" geriet in einen Zeitwirbel und drohte, aus der Existenz gelöscht zu werden. Dein beherzter Sprung in den Wirbel rettete beide und brachte euch in eine faszinierende Zukunft."</string>
 
 </resources>
