feat: welcome activity and app startup
- change the behaviour, so that at initial start, welcome gets shown
- welcome is followed by char_init
- finishing char_init sets up the Database and inits the quests
- changed back_behaviour in classes that would finish the app
- those now get an dialog asking the player if he wants to leave
- therefor refactores main, char_init, welcome and main_menu activities

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -214,5 +214,9 @@
     <string name="accept_terms">Ich bin mindestens 18 Jahre alt und mit den Bedingungen einverstanden.</string>
     <string name="continue_button">Weiter</string>
     <string name="welcome_title">Uncover</string>
+    <string name="no_back_dialog_header">Beenden</string>
+    <string name="no_back_dialog_message">Möchtest du die App wirklich beenden?</string>
+    <string name="no_back_dialog_accept">Ja</string>
+    <string name="no_back_dialog_dismiss">Nein</string>
 
 </resources>
