fix(ui): fixed a bug considering level up
- When player was maxlevel, the level-up-message was still successful
- Changed it, so player gets message:
- "You are already max level!"
- Also did some refactoring to set up clearer structure in ui part

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -254,6 +254,7 @@
     <!-- Finale Achievement -->
     <string name="achievement_25">Uncover-Legende (Schalte alle anderen Erfolge frei)</string>
     <string name="menu_achievements">Erfolge</string>
+    <string name="level_up_max_reached">Du hast das maximale Level bereits erreicht!</string>
 
 
 </resources>
