--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -273,6 +273,8 @@
     <string name="welcome_text_internet">• Internetverbindung wird für das Laden der Karte benötigt</string>
     <string name="welcome_text_location">• Standortfreigabe ermöglicht das Spielen von Quests in deiner Nähe</string>
     <string name="welcome_text_fog_of_war">• Quests werden in einem bestimmten Radius um deinen Standort freigeschaltet</string>
+    <string name="enter_character_name">Gib den Namen deines Spielcharacters ein:</string>
+    <string name="start_game">Spiel starten (Zur Karte)</string>
 
 
 </resources>
