feat(ui): redesign random quest screen with dark mode support
- Integrate UncoverBaseScreen for consistent theming
- Update layout with new headings and quest card
- Implement Material Design color scheme for dark mode compatibility
- Add scrollable content for longer quest texts
- Remove redundant quest stage display

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -275,6 +275,9 @@
     <string name="welcome_text_fog_of_war">• Quests werden in einem bestimmten Radius um deinen Standort freigeschaltet</string>
     <string name="enter_character_name">Gib den Namen deines Spielcharacters ein:</string>
     <string name="start_game">Spiel starten (Zur Karte)</string>
+    <string name="rand_quest_title">Nebenquest</string>
+    <string name="rand_quest_subtitle">Ein mysteriöses Ereignis am Wegesrand...</string>
+    <string name="rand_quest_finish">Quest abschließen</string>
 
 
 </resources>
